# ai-service

./: README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: build.yaml  tollgate.yaml
app/: config.py  main.py
app/api/: assignments.py  health.py
app/models/: assignments.py
app/service/: assignment_service.py  fallback_scorer.py  ollama_client.py
tests/: conftest.py  test_assignments.py  test_fallback_scorer.py  test_health.py  test_ollama_client.py
