[tool.poetry]
name = "ai-service"
version = "1.0.0"
description = "AI service for the DLS-2 food delivery platform"
authors = ["Benjamin Harris <Benny@aingivingmymail.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
pydantic-settings = "^2.13.0"
httpx = "^0.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.0,<10.0.0)",
    "httpx (>=0.28.0,<0.29.0)",
    "pylint (>=4.0.0,<5.0.0)",
    "pytest-asyncio (>=0.25.0)",
]

[tool.pylint.main]
ignore-paths = ["tests/"]

[tool.pylint."messages_control"]
disable = ["too-few-public-methods", "missing-module-docstring"]
good-names = ["db"]

[tool.pylint.format]
max-line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
